--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btnTest"
+        android:id="@+id/btnAliUpload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CLICK" />
+        android:text="ALI IMAGE UPLOAD ACTIVITY" />
 </LinearLayout>
