--- a/app/src/main/res/layout/activity_aliimage_upload.xml
+++ b/app/src/main/res/layout/activity_aliimage_upload.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.fleetlabs.common.ALIImageUploadActivity">
+    tools:context="com.fleetlabs.common.AliImageUploadActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,6 +45,20 @@
             android:layout_weight="1"
             android:text="LOAD 2" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TEST"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/btnQiNiu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Qi Niu"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/ivTest"
