--- a/app/src/main/res/layout/activity_aliimage_upload.xml
+++ b/app/src/main/res/layout/activity_aliimage_upload.xml
@@ -13,6 +13,7 @@
 
         <Button
             android:id="@+id/btnSimpleUpload"
+            style="@style/buttonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -20,6 +21,7 @@
 
         <Button
             android:id="@+id/btnSimpleLoad"
+            style="@style/buttonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -33,6 +35,7 @@
 
         <Button
             android:id="@+id/btnMultipartUpload"
+            style="@style/buttonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -40,6 +43,7 @@
 
         <Button
             android:id="@+id/btnMultipart"
+            style="@style/buttonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -48,6 +52,7 @@
 
     <Button
         android:id="@+id/btnTest"
+        style="@style/buttonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TEST"
@@ -55,6 +60,7 @@
 
     <Button
         android:id="@+id/btnQiNiu"
+        style="@style/buttonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Qi Niu"
