--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,21 @@
 
     <Button
         android:id="@+id/btnAliUpload"
+        style="@style/buttonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ALI IMAGE UPLOAD ACTIVITY" />
 
     <Button
         android:id="@+id/btnQiNiuUpload"
+        style="@style/buttonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="QiNiu IMAGE UPLOAD ACTIVITY" />
 
     <Button
         android:id="@+id/btnMultipartUpload"
+        style="@style/buttonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Multipart Upload ACTIVITY" />
