--- a/app/src/main/res/layout/activity_qi_niu_upload.xml
+++ b/app/src/main/res/layout/activity_qi_niu_upload.xml
@@ -7,6 +7,7 @@
 
     <Button
         android:id="@+id/btnQNSimpleUpload"
+        style="@style/buttonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SIMPLE UPLOAD" />
