--- a/app/src/main/res/layout/activity_edit_view_with_delete.xml
+++ b/app/src/main/res/layout/activity_edit_view_with_delete.xml
@@ -10,6 +10,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/evwdEditText"
         />
+    <com.fleetlabs.library.view.EditViewWithDelete
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/evwdEditText2"
+    />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
